Fix, made some fixes to ul

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -36,26 +36,26 @@
     <p></p><h1><strong>A quick Recipe to Rosemary-Roasted Chicken</strong></h1>
     <p><h3><em>Ingredients</em></h3></p>
     <ul>
-        <l>6 bone-in skin on chicken thighs</l>
-        <l>2 tablespoons chopped fresh rosemary</l>
-        <l>Ground black pepper</l>
-        <l>cooking spray</l>
-        <l>2 tablespoons butter</l>
-        <l>1 large online, sliced</l>
-        <l>salt, plus more to taste</l>
-        <l>4 teaspoons white Sugar</l>
-        <l>5 medium apples</l>
-        <l>1 pound Yukon Gold potetoes</l>
-        <l>2 tablespoons Olive oil</l>
+        <li>6 bone-in skin on chicken thighs</li>
+        <li>2 tablespoons chopped fresh rosemary</li>
+        <li>Ground black pepper</li>
+        <li>cooking spray</li>
+        <li>2 tablespoons butter</li>
+        <li>1 large online, sliced</li>
+        <li>salt, plus more to taste</li>
+        <li>4 teaspoons white Sugar</li>
+        <li>5 medium apples</li>
+        <li>1 pound Yukon Gold potetoes</li>
+        <li>2 tablespoons Olive oil</li>
     </ul>
     <h1><strong>Directions</strong></h1>
     <ol>
-        <l>Preheat the oven to 400 degrees.</l>
-        <l>Melt butter in skillet over medium heat.</l>
-        <l>Layer apples, potatoes and sauteed onion slices.</l>
-        <l>Drizzle Olive Olive.</l>
-        <l>Roast in the preheated oven.</l>
-        <l>Let the Chicken rest before serving.</l>
+        <li>Preheat the oven to 400 degrees.</li>
+        <li>Melt butter in skillet over medium heat.</li>
+        <li>Layer apples, potatoes and sauteed onion slices.</li>
+        <li>Drizzle Olive Olive.</li>
+        <li>Roast in the preheated oven.</li>
+        <li>Let the Chicken rest before serving.</li>
     </ol>
 
 </body>
