Fixes to <ul></ul> lists.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,25 +11,25 @@
     <p></p><h1><strong>A quick Recipe to make Lasagna</strong></h1>
     <p><h3><em>Ingredients</em></h3></p>
     <ul>
-        <l>Lasagna Noodles</l>
-        <l>Meat</l>
-        <l>Onion And Garlic</l>
-        <l>Tomato Products</l>
-        <l>Sugar</l>
-        <l>Spices and Seasoning</l>
-        <l>Cheeses</l>
-        <l>Eggs</l>
+        <li>Lasagna Noodles</li>
+        <li>Meat</li>
+        <li>Onion And Garlic</li>
+        <li>Tomato Products</li>
+        <li>Sugar</li>
+        <li>Spices and Seasoning</li>
+        <li>Cheeses</li>
+        <li>Eggs</li>
     </ul>
     <h1><strong>How to Make Lasana Step-By-Step</strong></h1>
     <p><h4>Here's very brief overview of what you can expect
         when you make homemade lasana.</h4></p>
     <ol>
-        <l>Make the meat sauce.</l>
-        <l>Cook the Noodles.</l>
-        <l>Make the ricotta mixture.</l>
-        <l>Layer the lasagna.</l>
-        <l>Cover with foil and bake.</l>
-        <l>Let the lasana rest before serving.</l>
+        <li>Make the meat sauce.</li>
+        <li>Cook the Noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasana rest before serving.</li>
     </ol>
     <h1><strong>Rosemary-Roasted Chicken</strong></h1>
     <p></p><img src="../images/RoseMerryChicken.jpg " alt="Rosemary-Roasted Chicken finished image">
