Fix: changed page title and recipe names corrections
The heading of the page was just document, changed it to a proper names

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Khan Recipes</title>
 </head>
 <body>
-    <h1><strong>Lasagna Recipe</strong></h1>
+    <h1><strong>SOME QUICK RECEPIS FOR YUMMY FOOD</strong></h1>
     <p></p><img src="../images/Lasagna.jpg " alt="Lasagna finished image">
     <p></p><h1><strong>A quick Recipe to make Lasagna</strong></h1>
     <p><h3><em>Ingredients</em></h3></p>
